--- a/05.12.2023/13-Ozlem/index.html
+++ b/05.12.2023/13-Ozlem/index.html
@@ -72,7 +72,7 @@
     <!-- section bolumu -->
     <section>
         <h2>section2</h2>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. </p>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit </p>
     </section>
 
 
