--- a/10.12.2023/13-Ozlem/index.html
+++ b/10.12.2023/13-Ozlem/index.html
@@ -189,7 +189,7 @@
                             consectetur adipisicing elit. Necessitatibus at debitis incidunt
                             laborum pariatur inventore commodi fugiat adipisci quo expedita.Lorem ipsum dolor sit amet
                             consectetur adipisicing elit. Necessitatibus at debitis incidunt
-                            laborum pariatur inventore commodi fugiat adipisci quo expedita.</p>
+                            laborum pariatur inventore commodi fugiat adipisci quo expedita</p>
 
                     </div>
 
