--- a/17.12.2023/13-Ozlem/index.html
+++ b/17.12.2023/13-Ozlem/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     
-    <h1 style="text-align: center;"> JAVASCRIPT!</h1>
+    <h1 style="text-align: center;"> JAVASCRIPT</h1>
 
 
 
