CSS Homework Update

--- a/05.12.2023/03-Erol/index.html
+++ b/05.12.2023/03-Erol/index.html
@@ -2,63 +2,49 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>CSS Homework</title>
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
   </head>
-  <body>
-    <!-- header -->
-    <header>
-      <h1>Header</h1>
-      <nav>
-        <ul>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Contact</a></li>
-        </ul>
-      </nav>
-    </header>
-    <!-- aside one -->
-    <aside class="aside1">
-      <h2>Aside one</h2>
-    </aside>
 
-    <!-- aside two -->
-    <aside class="aside2">
-      <h2>Aside two</h2>
-    </aside>
-    <!-- main -->
-    <main>
-      <h2>Main</h2>
+  <body>
+    <header class="my-header">
+      <div class="header-content">
+        <h1>Header</h1>
+        <nav class="my-navbar">
+          <ul class="my-navbarUls">
+            <li class="links">About</li>
+            <li class="links">Home</li>
+            <li class="links">Contact</li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+
+    <main class="my-main">
       <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia ea
-        excepturi ullam? Voluptatum, architecto suscipit! Non veritatis
-        architecto at atque aperiam, hic fugiat voluptatibus. Adipisci unde
-        itaque mollitia! Distinctio similique vero dolorum reprehenderit quis
-        deserunt maxime voluptate, corrupti repellendus? Accusamus similique
-        quidem consequatur itaque ipsum reiciendis odio at saepe eum.
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Non molestiae
+        totam deleniti quos sunt nemo natus exercitationem fugit! Labore
+        laudantium temporibus dignissimos enim. Eveniet commodi mollitia, omnis
+        esse qui alias?
       </p>
-      <figure>
-        <img src="manzara.jpeg" alt="" />
-      </figure>
+      <figure><img src="manzara.jpeg" alt="" /></figure>
       <p>
-        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quia ea
-        excepturi ullam? Voluptatum, architecto suscipit! Non veritatis
-        architecto at atque aperiam, hic fugiat voluptatibus. Adipisci unde
-        itaque mollitia! Distinctio similique vero dolorum reprehenderit quis
-        deserunt maxime voluptate, corrupti repellendus? Accusamus similique qu
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum officia
+        nulla hic excepturi libero vitae et, repudiandae, vel dolores pariatur,
+        iste beatae perspiciatis nostrum dicta natus dolorem optio placeat amet.
       </p>
     </main>
 
-    <!-- section -->
-    <section>
+    <aside class="my-aside1"><h2>Aside one</h2></aside>
+
+    <aside class="my-aside2"><h2>Aside two</h2></aside>
+
+    <section class="my-section">
       <h2>Section</h2>
-      <p>Lorem ipsum dolor sit amet.</p>
     </section>
 
-    <!-- footer -->
-    <footer>
+    <footer class="my-footer">
       <h2>Footer</h2>
     </footer>
   </body>
