--- a/2024.01.21/13_Ozlem/index.html
+++ b/2024.01.21/13_Ozlem/index.html
@@ -1,5 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+</head>
+
+<body>
+    <h1>OOP Homework</h1>
+
+
+    <script src="./app.js"></script>
+</body>
+
+</html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
