dom homework added

--- a/2024.01.28/13_Ozlem/index.html
+++ b/2024.01.28/13_Ozlem/index.html
@@ -9,7 +9,12 @@
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css"
     />
   </head>
+
+
+
   <body>
+    <div class="container">
+
     <div class="container p-5 bg-black text-white">
       <h1>Custom Fields</h1>
       <div class="input-group mb-3">
@@ -24,6 +29,7 @@
         <button
           class="btn btn-outline-primary bg-white text-primary"
           type="button"
+          id="create-btn"
         >
           Create Field
         </button>
@@ -32,16 +38,19 @@
 
     <hr />
 
-    <!-- yeni input ve div alani -->
+    <!-- yeni input ve form alani -->
 
-    <div class="input-group mb-3 myInpGroup">
+    <form action="" id="my-form" class="d-flex gap-2">
       <!-- 
-js de olusturulacak -->
-    </div>
+js de olusturulacak . Alttaki input alanlari-->
+
+    </form>
+
+<hr>
 
     <!-- table -->
 
-    <table class="table">
+    <table class="table table-bordered" id="my-table">
       <thead>
         <tr>
           <!-- th lar js de olsuturulacak -->
@@ -49,12 +58,12 @@ js de olusturulacak -->
       </thead>
 
       <tbody>
-        <tr id="headerRow1">
+       
           <!-- js de olusturulacak -->
-        </tr>
+   
       </tbody>
     </table>
-
+</div>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
@@ -64,3 +73,4 @@ js de olusturulacak -->
     <script src="./app.js"></script>
   </body>
 </html>
+
