DOM homework added

--- a/2024.01.28/13_Ozlem/index.html
+++ b/2024.01.28/13_Ozlem/index.html
@@ -32,7 +32,7 @@
           <input
             type="text"
             class="form-control"
-            placeholder="Creat Your Table"
+            placeholder="Creat Your Table.."
       
             
           />
